added the variables, reset syles & some base styles.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link ref="icon" href="./assets/favicon.ico"></link>
+  <link rel="stylesheet" href="./style.css">
   <title>Becca Becca</title>
 </head>
 <body>
@@ -72,8 +73,8 @@
     <h3>Get in Touch</h3>
     <p class="leading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     <form>
-      <input type="text" placeholder="Name" />
-      <input type="email" placeholdet="Email" />
+      <input type="text" placeholder="Name" autocomplete="off" />
+      <input type="email" placeholder="Email" autocomplete="off" />
       <textarea placeholder="Your Message"></textarea>
       <button class="button">Send Flare</button>
     </form>
