--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link ref="icon" href="./assets/favicon.ico"></link>
+  <link rel="icon" href="./assets/favicon.ico"></link>
   <link rel="stylesheet" href="./style.css">
-  <title>Becca Becca</title>
+  <title>Mobile First Web</title>
 </head>
 <body>
   <nav class="site-nav grid">
