finished mobile style.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <section id="contact">
     <h3>Get in Touch</h3>
-    <p class="leading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <p class="leading">Lorem ipsum dolor sit amet, consectetur.</p>
     <form>
       <input type="text" placeholder="Name" autocomplete="off" />
       <input type="email" placeholder="Email" autocomplete="off" />
