finished tablet style.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <footer>
     <div class="grid">
-      <p class="copyright">Copyright 2020 Rebecca Xu</p>
+      <p class="copyright">Copyright 2020 <br />Rebecca Xu</p>
       <ul class="social">
         <li><a href=""><img src="./assets/images/icon_fb.svg" alt="facebook" /></a></li>
         <li><a href=""><img src="./assets/images/icon_tw.svg" alt="twitter" /></a></li>
