--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section id="welcome" class="grid">
     <div class="welcome-text">
-      <h2>Space enthusiast <br />& front-end developer</h2>
+      <h2>Space Enthusiast <br />& Front-end Developer</h2>
       <p class="leading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <a href="#porfolio" class="button">view my work</a>
     </div>
